# atomforge

./: .gitignore  LICENSE  justfile  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: zensical.toml
docs/docs/: index.md  installation.md  mental_model.md
docs/docs/concepts/: backends.md  models.md  registries.md  tasks.md
docs/docs/tutorials/: first_calculation.ipynb  first_calculation.md  index.md
docs/docs/tutorials/quarto/: first_calculation.qmd
docs/scripts/: render_tutorials.py
docs/stylesheets/: extra.css
plugins/atomforge-chgnet/: pyproject.toml
plugins/atomforge-chgnet/src/atomforge_chgnet/: __init__.py  definitions.py  environment.py  executor.py  manifest.py  spec.py
plugins/atomforge-chgnet/src/atomforge_chgnet/overrides/: atomic_fingerprint.py
plugins/atomforge-chgnet/tests/: test_manifest.py
plugins/atomforge-m3gnet/: pyproject.toml
plugins/atomforge-m3gnet/src/atomforge_m3gnet/: __init__.py  definitions.py  environment.py  executor.py  manifest.py  spec.py
plugins/atomforge-m3gnet/tests/: test_manifest.py
plugins/atomforge-mace/: pyproject.toml
plugins/atomforge-mace/src/atomforge_mace/: __init__.py  definitions.py  environment.py  executor.py  mace_model.py  manifest.py  spec.py
plugins/atomforge-mace/tests/: test_manifest.py
plugins/atomforge-mg3net/: pyproject.toml
plugins/atomforge-mg3net/src/atomforge_mg3net/: __init__.py  model.py
scripts/release/: select_release_files.py  smoke_release.py
src/atomforge/: __init__.py  structure.py
src/atomforge/_builtins/model/: __init__.py  ase_lj.py  model_manifests.py  nodep_model.py
src/atomforge/_builtins/task/: batch_singlepoint.py  bfgs.py  singlepoint.py  task_manifests.py
src/atomforge/_core/env/: env.py  factory.py
src/atomforge/_core/model/: __init__.py  executor.py  spec.py
src/atomforge/_core/protocol/: core.py  request.py  response.py  session.py
src/atomforge/_core/registry/: base_manifest.py  model_manifest.py  task_manifest.py
src/atomforge/_core/resources/: resource_probes.py
src/atomforge/_core/task/: capability.py  executor.py  spec.py
src/atomforge/_host/backend/subprocess/: backend.py
src/atomforge/_host/cli/: main.py
src/atomforge/_host/cli/model/: __init__.py  info.py  list.py
src/atomforge/_host/env/: __init__.py  uv.py
src/atomforge/_host/env/base/: __init__.py  handle.py  info.py  provider.py
src/atomforge/_host/settings/: settings.py
src/atomforge/_runtime/backend/subprocess/: worker.py
src/atomforge/_runtime/probes/: torch_probe.py
src/atomforge/_runtime/registry/: base_converter.py  registry.py  task_registration.py
src/atomforge/_runtime/registry/model/: model_helpers.py  model_registration.py  model_registry.py
src/atomforge/_runtime/registry/task/: task_helpers.py  task_registry.py
src/atomforge/_runtime/resources/: __init__.py  accelerator.py  precision.py  resolve.py
src/atomforge/backend/base/: resources.py  session.py
src/atomforge/backend/base/resources/: __init__.py  accelerator.py  precision.py  shared.py
src/atomforge/backend/subprocess/: __init__.py  _environment.py  _execution.py  _model_session.py  _provenance.py  _transport.py  backend.py  core.py  request.py  response.py  worker.py
src/atomforge/cli/: main.py
src/atomforge/cli/model/: __init__.py  info.py  list.py  main.py
src/atomforge/cli/plugin/: __init__.py  main.py
src/atomforge/cli/task/: __init__.py  list.py  main.py
src/atomforge/env/: __init__.py  uv.py
src/atomforge/env/base/: __init__.py  command.py  dependency.py  env.py  errors.py  factory.py  handle.py  info.py  provider.py  pyproject_writer.py  resolution.py
src/atomforge/env/uv/: __init__.py  pyproject_writer.py  resolve.py  uv.py  uv_pyproject_writer.py
src/atomforge/launcher/: launcher.py
src/atomforge/model/: __init__.py  ase_lennard_jones.py  ase_lj.old  ase_lj.py  builtin.py  chgnet_model.py  mace_model.py  nodep_model.py  probes.py  registry.py
src/atomforge/model/base/: __init__.py  executor.py  metadata.py  model.py  property.py  resource_caps.py  spec.py
src/atomforge/model/core/: __init__.py  executor.py  metadata.py  result.py
src/atomforge/model/registry/: __init__.py  builtin.py  registry.py
src/atomforge/registry/: entry_point.py
src/atomforge/registry/core/: converter.py  helpers.py  registry.py
src/atomforge/registry/model/: builtins.py  helpers.py  manifest.py  registration.py  registry.py
src/atomforge/registry/task/: builtins.py  helpers.py  manifest.py  registration.py  registry.py
src/atomforge/settings/: settings.py
src/atomforge/task/: __init__.py  base.py  batch_singlepoint.py  bfgs.py  singlepoint.py
src/atomforge/task/base/: __init__.py  base.py  builtin.py  capability.py  executor.py  registry.py  result.py  spec.py
src/atomforge/task/core/: __init__.py  capability.py  executor.py  resources.py  result.py  spec.py
src/atomforge/task/registry/: __init__.py  builtin.py  registry.py
tests/: conftest.py  test_import_boundaries.py  test_imports.py  test_structure.py
tests/backend/subprocess/: conftest.py  test_backend.py  test_worker.py  test_worker_run.py
tests/cli/model/: test_info.py  test_list.py
tests/env/: test_env_spec.py  test_parse_requirement.py  test_provider_provenance.py  test_uv_pyproject_writer.py
tests/integration/: .coverage  conftest.py  test_analyze_symmetry_integration.py  test_bfgs_integration.py  test_optimize_integration.py  test_single_point.py
tests/registry/core/: test_core_converter.py  test_core_helpers.py
tests/registry/model/: conftest.py  test_model_manifest.py  test_model_manifest_converter.py  test_model_registry.py
tests/registry/task/: conftest.py  test_manifest_converter.py  test_task_manifest.py
tests/resources/: test_execution_resources.py  test_resolve_accelerator.py  test_resolve_precision.py  test_resolved_resources.py
tests/task/: conftest.py  test_bfgs.py  test_registry.py  test_singlepoint.py
