[project]
name = "atomforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "ase>=3.28.0",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "rich>=14.3.3", 
    "uv>=0.11.7,<0.12",
]

[project.scripts]
atomforge = "atomforge:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
#   "--cov-report", "term",
#   "--cov-report", "html:.coverage-html",
#   "--cov-report", "xml:.coverage.xml",
#   "--junitxml", ".report.xml",
#   "--cov", "src/atomforge"
]

[tool.coverage.run]
omit = []


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
atomforge = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test-cov = { cmd = "pytest --cov-report term --cov-report html:.coverage-html --cov src/atomforge", default-environment = "dev" }
test-cov-sandbox = { cmd = "pytest --cov-report term --cov-report html:.coverage-html --cov src/atomforge", env = { UV_CACHE_DIR = "/tmp/uv-cache" }, default-environment = "dev" }

ruff-check = { cmd = "ruff check .", default-environment = "dev" }
ruff-fmt = { cmd = "ruff format .", default-environment = "dev" }
