[project]
name = "atomforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "rich", 
    "uv>=0.11.7,<0.12", 
    "rich-click>=1.9.7,<2",
]

[project.scripts]
atomforge = "atomforge._host.cli.main:main"

[project.entry-points.'atomforge.task']
single_point = "atomforge._builtins.task.task_manifests:single_point_manifest"
bfgs = "atomforge._builtins.task.task_manifests:bfgs_manifest"

[project.entry-points.'atomforge.model']
lennard_jones = "atomforge._builtins.model.model_manifests:lennard_jones_manifest"
no_dep = "atomforge._builtins.model.model_manifests:no_dep_manifest"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "depgraph-py>=0.1.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
#   "--cov-report", "term",
#   "--cov-report", "html:.coverage-html",
#   "--cov-report", "xml:.coverage.xml",
#   "--junitxml", ".report.xml",
#   "--cov", "src/atomforge"
]

[tool.coverage.run]
omit = []


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
atomforge = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = { cmd = "pytest", default-environment = "dev" }
test-cov = { cmd = "pytest --cov-report term --cov-report html:.coverage-html --cov src/atomforge", default-environment = "dev" }
test-cov-sandbox = { cmd = "pytest --cov-report term --cov-report html:.coverage-html --cov src/atomforge", env = { UV_CACHE_DIR = "/tmp/uv-cache" }, default-environment = "dev" }

ruff-check = { cmd = "ruff check .", default-environment = "dev" }
ruff-fmt = { cmd = "ruff format .", default-environment = "dev" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
atomforge-chgnet = { workspace = true }
