[project]
name = "atomforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "atomforge-core",
    "atomforge-runtime",
    "atomforge-builtins",
    "pydantic>=2",
    "rich",
    "uv>=0.11.7,<0.12",
    "rich-click>=1.9.7,<2",
    "packaging>=26.0",
]

[project.scripts]
atomforge = "atomforge.cli.main:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "depgraph-py>=0.1.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",    
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
#   "--cov-report", "term",
#   "--cov-report", "html:.coverage-html",
#   "--cov-report", "xml:.coverage.xml",
#   "--junitxml", ".report.xml",
#   "--cov", "src/atomforge"
]

[tool.coverage.run]
omit = []

[tool.ruff]
line-length = 88

[tool.uv.sources]
atomforge_core = { path="packages/atomforge-core", editable=true }
atomforge_runtime = { path="packages/atomforge-runtime", editable=true }
atomforge_builtins = { path="packages/atomforge-builtins", editable=true }
