[project]
name = "atomforge-m3gnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "atomforge_core",
]

[project.entry-points.'atomforge.model']
m3gnet = "atomforge_m3gnet.manifest:m3gnet_manifest"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
atomforge_core = { path="../../packages/atomforge-core", editable=true }
